<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyPlaces</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="get_my_location">get my location</string>
    <string name="search_by_text">search by text</string>
    <string name="geocorder">location to cordinet</string>
    <string name="whatDoYouWant">what do you wnat?</string>
    <string name="geocorderHint">enter a location</string>
    <string name="searchNearMyPlace">search near me</string>
    <string name="IamHere">I am Here</string>
    <string name="km">Km</string>
    <string name="cafeHouse">Cafe place</string>
    <string name="pubs">Pubs</string>
    <string name="bars">Bars</string>
    <string name="resturants">Restaurants</string>
    <string name="gasStations">Gas stations</string>
    <string name="parks">Parks</string>
    <string name="food">Food</string>
    <string name="pharmacy">Pharmacys</string>
    <string name="bakery">Bakerys</string>
    <string name="synagogues">Synagogues</string>
    <string name="schools">schools</string>
    <string name="meters">meters</string>
    <string name="nearMe">near me</string>
    <string name="byText">by text</string>
    <string name="wicthTypeToSerach_textOrNearBy">How To Search?</string>
    <string name="noLocationTitle">Problem finding our location.</string>
    <string name="noLocationMsg">We could not find our location. please share your location with us so we can help you up.</string>
    <string name="setting">Setting</string>
    <string name="cancel">Cancel</string>
    <string name="cancelIt">Cancel</string>
    <string name="pullToRefreshItemClickTitle">You choose</string>
    <string name="pullToRefreshItemClickMsg">Do you want to navigate to</string>
    <string name="navigate">Navigate</string>
    <string name="emptyListVie">The list is empty. Please Search something.</string>
    <string name="ZERO_RESULAT_title">Problem !</string>
    <string name="ZERO_RESULAT_mag">We are sorry. there is no result for your query. please try different parameters.</string>
    <string name="language">Language</string>
    <string name="measure">Measurement</string>
    <string name="hebrew">Hebrew</string>
    <string name="english">English</string>
    <string name="setting_favorites">Favorites</string>
    <string name="showFavorite">show favorite places</string>
    <string name="deleteFavories">Delete favorites</string>
    <string name="addPlaceToFavoriteTitle">Add To Favorite</string>
    <string name="addPlaceToFavoriteMsg">Do you want to add this place to Favorite?</string>
    <string name="pressBackAgainForShutDwon">Press back again for Ending</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawe_close">drawer_close</string>
    <string name="kmOrMile">Km or Miles</string>
    <string name="miles">Mile</string>
    <string name="setting_search">Search</string>
    <string name="show_myLocation">Show my Location</string>
    <string name="setting_advance">More settings</string>
    <string name="iAmHere">I am here!</string>
    <string name="firstTimeLuanchTitle">Welcome to My Place</string>
    <string name="firstTimeLuanchMsg">This is a quick guide to help your walk throw the app.</string>
    <string name="firstTimeLuanchShowSwicthText">You can switch search type by click this button</string>
    <string name="firstTimeLuanchShowSwicthTitle">The Switch</string>
    <string name="firstTimeLuanchShowSearchBtnText">After choosing the right parameter click here for search.</string>
    <string name="firstTimeLuanchShowSearchBtnTitle">The search button.</string>
    <string name="firstTimeLuanchShowToolBarTtext">To get to the menu you click here.</string>
    <string name="firstTimeLuanchShowToolBarTitle">Menu</string>
    <string name="go">Go</string>
    <string name="showShowCaseView" >show ShowCase View</string>
    <string name="noInternet">There is no internet connection. the application needs internet.</string>
    <string name="changeOnTheNextSearch">The distance will be change in the next search or with Reboot.</string>
    <string name="feet">feet</string>
    <string name="yesInternet">There is a nNetwork available</string>
    <string name="add">Add</string>
    <string name="share">Share</string>
    <string name="favoriteDeleted">Favorite list has deleted !</string>
    <string name="StartSearchDialogMassge">Strating searching.  please wait a moment.</string>
</resources>
