<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightBlue"
    android:orientation="vertical"
    tools:context="com.amanecer.myplaces.fragments.Navigation_fragment"
    >

    <!-- &lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="this is the drawer layout!!!" />-->

    <Button
        android:id="@+id/show_myLocation"
        android:layout_width="wrap_content"
        android:layout_height="48dp"

        android:text="@string/show_myLocation"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/setting_favorites"
        android:layout_width="wrap_content"
        android:layout_height="48dp"

        android:text="@string/setting_favorites"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/show_favorites"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:visibility="gone"
        android:text="@string/showFavorite" />
    <Button
        android:id="@+id/delete_favorites"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:visibility="gone"
        android:text="@string/deleteFavories" />


    <Button
        android:id="@+id/setting_search"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:visibility="gone"
        android:text="@string/setting_search" />
    <Switch
        android:id="@+id/kmOrMiles"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:showText="true"
        android:text="@string/kmOrMile"
        android:textColor="@color/white"
        android:textOff="@string/km"
        android:textOn="@string/miles"
        android:layout_gravity="center_horizontal" />


    <Button
        android:id="@+id/setting_advance"
        android:layout_width="143dp"
        android:layout_height="48dp"

        android:text="@string/setting_advance"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showShowCaseView"
        android:id="@+id/showShowCaseView"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
